--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --hot --colors --config build/webpack.dev.js",
-    "build": "rm -rf dist & webpack --optimize-minimize --config build/webpack.prd.js"
+    "build": "rm -rf dist & webpack --config build/webpack.prd.js",
+    "build2": "rm -rf dist & webpack --optimize-minimize --config build/webpack.prd.js"
   },
   "keywords": [
     "coala",
@@ -20,7 +21,7 @@
     "typo.css": "^2.1.2"
   },
   "devDependencies": {
-    "coala-dot-loader": "^0.0.2",
+    "coala-dot-loader": "^0.0.3",
     "css-loader": "^0.18.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
