--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "coala": ">= 1.0.0-beta.1 < 2.0.0",
     "jquery": "^3.2.1",
+    "nprogress": "^0.2.0",
     "simplemde": "^1.11.2",
     "typo.css": "^2.1.2"
   },
